fixes landing navbar collapse navigation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,23 +51,23 @@ $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
   color: #555555;
 }
 
-.navbar {
+.navbar.admin {
   /* color1, color2, and text color are defined in company model */
   /* background-color set to transparent in mvpready-admin.css */
   background-clip: border-box;
   border:0;
 }
 
-.navbar {
+.navbar.admin {
   height: 65px;
 }
 
-.navbar .container-fluid {
+.navbar.admin .container-fluid {
   padding-left: 4%;
   padding-right: 4%;
 }
 
-.navbar .navbar-brand {
+.navbar.admin .navbar-brand {
   // height set to 65px in mvpready-admin - to match navbar height
   line-height: 58px  // use this to center the logo
 }
@@ -80,43 +80,43 @@ $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
   padding-right: 15px;
 }
 
-.navbar h3 {
+.navbar.admin h3 {
   margin-top: 23px;
   margin-bottom: 0;
   // display: inline-block;
 }
 
 @media (max-width: 450px) {
-  .navbar-header h3 {
+  .navbar.admin .navbar-header h3 {
     font-size: 16px;
     margin-top: 30px;
   }
-  .navbar-brand img {
+  .navbar.admin .navbar-brand img {
     padding-right: 0;
   }
 }
 
 @media (min-width: 450px) and (max-width: 475px) {
-  .navbar-header h3 {
+  .navbar.admin .navbar-header h3 {
     font-size: 20px;
     margin-top: 26px;
   }
-  .navbar-brand img {
+  .navbar.admin .navbar-brand img {
     padding-right: 5px;
   }
 }
 
 @media (min-width: 476px) and (max-width: 500px) {
-  .navbar-header h3 {
+  .navbar.admin .navbar-header h3 {
     font-size: 22px;
     margin-top: 25px;
   }
-  .navbar-brand img {
+  .navbar.admin .navbar-brand img {
     padding-right: 10px;
   }
 }
 
-.navbar .btn {
+.navbar.admin .btn {
   margin-top: 25px;
 }
 
